Fixed some file issues

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Karla:wght@200;400;700&display=swap"
     />
-    <link rel="stylesheet" href="/css/index.css" />
+    <link rel="stylesheet" href="index.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>BlogSpace</title>
   </head>
@@ -23,6 +23,6 @@
     <!-- POSTS -->
     <div id="blog-list"></div>
     <!-- JS -->
-    <script src="/js/index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
