Modified Post button's focus color and fixed bug regarding user posting empty values

--- a/index.html
+++ b/index.html
@@ -15,9 +15,15 @@
     <!-- FORM -->
     <form id="new-post">
       <label for="post-title">Title:</label>
-      <input type="text" id="post-title" name="post-title" />
+      <input type="text" id="post-title" name="post-title" required />
       <label for="post-body">Post:</label>
-      <textarea name="post-body" id="post-body" cols="30" rows="5"></textarea>
+      <textarea
+        name="post-body"
+        id="post-body"
+        cols="30"
+        rows="5"
+        required
+      ></textarea>
       <button>POST</button>
     </form>
     <!-- POSTS -->
